Modifiquei a logo no index

--- a/index.html
+++ b/index.html
@@ -43,11 +43,9 @@
             </a>
         </nav>
         <div>
-            <figure>
-                <figcaption>
-                    <img class="p-4 w-100" src="assets/Logo Site Música.png" alt="">
-                </figcaption>
-            </figure>
+            <a href="#">
+                <img class="p-4 w-100" src="assets/Logo Site Música.png" alt="">
+            </a>
         </div>
 
     </header>
