--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
     <main class="flex-grow-1 w-75">
         <div  class="justify-content-around p-5 m-3">
-            <h2 class="border border-black rounded bg-white text-center">PLAYLIST</h2>
+            <h2 class="border border-black rounded bg-white text-black text-center">PLAYLIST</h2>
         <div class="gap-5 d-flex p-4">
             <figure class="bg-secondary rounded-top w-50 border-top border-white">
                 <figcaption>
@@ -81,7 +81,7 @@
     </div>  
 
         <div class="justify-content-around p-5 m-3">
-            <h2 class="border border-black rounded bg-white text-center w-27">LANÇAMENTOS</h2>
+            <h2 class="border border-black rounded bg-white text-black text-center w-27">LANÇAMENTOS</h2>
             <div class="gap-5 d-flex p-4">
                 <figure class="bg-secondary rounded-top border-top border-white">
                     <figcaption>
