--- a/perfil.html
+++ b/perfil.html
@@ -61,7 +61,7 @@
             <div class="container mt-1 pt-5">
                 <div class="row">
                     <div class="col-12 col-sm-8 col-md-6 m-auto">
-                        <div class="card border-0 shadow">
+                        <div class="card border-0">
                             <div class="card-body">
                                 <svg class="d-flex mx-auto my-3" xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-person-circle" viewBox="0 0 16 16">
                                     <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
@@ -69,7 +69,7 @@
                                 </svg>
                                 <form action="">
                                     <input type="text" name="" id="" class="form-control my-4 py-2" placeholder="First Name">
-                                    <input type="text" name="" id="" class="form-control my-4 py-2" placeholder="Last Name">
+                                    <input type="te xt" name="" id="" class="form-control my-4 py-2" placeholder="Last Name">
                                     <input type="text" name="" id="" class="form-control my-4 py-2" placeholder="E-mail">
                                     <input type="password" name="" id="" class="form-control my-4 py-2" placeholder="Password">
                                 <div class="text-center mt-3">
@@ -84,6 +84,9 @@
             </div>
         </section>
     </main>
+
+</body>
+</html>
 
 </body>
 </html>
