--- a/already.html
+++ b/already.html
@@ -60,7 +60,7 @@
             <div class="container mt-1 pt-5">
                 <div class="row">
                     <div class="col-12 col-sm-8 col-md-6 m-auto">
-                        <div class="card border-0 shadow">
+                        <div class="card border-0">
                             <div class="card-body">
                                 <svg class="d-flex mx-auto my-3" xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-person-circle" viewBox="0 0 16 16">
                                     <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
